Changed show date

--- a/Task_1/Views/Student/Index.cshtml
+++ b/Task_1/Views/Student/Index.cshtml
@@ -16,7 +16,7 @@
         <tr>
             <td>@item.Id</td>
             <td>@item.Name</td>
-            <td>@item.Birthdate</td>
+            <td>@item.Birthdate.ToLongDateString()</td>
             <td>@item.Age</td>
     </tr>
     }
