--- a/Task_1/Views/Shared/_Layout.cshtml
+++ b/Task_1/Views/Shared/_Layout.cshtml
@@ -17,7 +17,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Student", "Index", "Student", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Award", "Index", "Award", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
