--- a/Task_1/Views/Award/Index.cshtml
+++ b/Task_1/Views/Award/Index.cshtml
@@ -1,21 +1,40 @@
-﻿
+﻿@model IEnumerable<Task_1.Models.Award>
+
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Awards</h2>
-<table>
-    <tr>
-        <th>Title</th>
-        <th>Description</th>      
-    </tr>
-    @foreach (var item in ViewBag.Awards)
-    {
-        <tr>
-            <td>@item.Id</td>
-            <td>@item.Title</td>    
-            <td>@item.Description</td> 
-        </tr>
-    }
-</table>
+<h2>Index</h2>
 
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
+<table class="table">
+    <tr>
+        <th> </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Title)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Description)
+        </th>
+        <th></th>
+    </tr>
+
+@foreach (var item in Model) {
+    <tr>
+        <td><img class="img-thumbnail"  width="100" height="100" src="@Url.Action("GetImage", "Award", new { item.Id })" /></td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Title)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Description)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+        </td>
+    </tr>
+}
+
+</table>
