--- a/Task_1/Views/Shared/_Layout.cshtml
+++ b/Task_1/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Student", "Index", "Student", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("User", "Index", "User", new { area = "" }, new { @class = "navbar-brand" })
                 @Html.ActionLink("Award", "Index", "Award", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
