--- a/Task_1/Views/Award/Edit.cshtml
+++ b/Task_1/Views/Award/Edit.cshtml
@@ -1,4 +1,8 @@
-﻿@model Task_1.Models.Award
+﻿@{
+    Layout = "~/Views/Shared/_LayoutPageForAwards.cshtml";
+}
+
+@model Task_1.Models.Award
 
 @{
     ViewBag.Title = "Edit";
@@ -6,10 +10,10 @@
 
 <h2>Edit</h2>
 
-@using (Html.BeginForm("Edit","Award", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Edit", "Award", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Award</h4>
         <hr />
@@ -33,21 +37,29 @@
         </div>
 
         <div class="form-group">
-            <div class="editor-label">Image</div>
-            <div class="editor-field">
+            <div class="control-label col-md-2 "><b>Image</b></div>
+            <div class="editor-field col-md-10 ">
                 @if (Model.Image == null)
                 {
-                    @:Noneewqsdefghjk,/
-    }
+                    @:None
+}
                 else
                 {
                     <img class="img-thumbnail" width="150" height="150" src="@Url.Action("GetImage", "Award", new { Model.Id })" />
                 }
+
+
                 <div>
-                    Upload new image:
-                    <input type="file" name="uploadImage" />
+
+                    <label for="files" class="btn btn-default"> Select file </label>
+                    <input type="file" id="files" style="visibility:hidden;" name="uploadImage" size="25" accept="image/*">
+
+
                 </div>
+
             </div>
+
+
         </div>
 
 
