--- a/Task_1/Views/Award/Index.cshtml
+++ b/Task_1/Views/Award/Index.cshtml
@@ -1,4 +1,8 @@
-﻿@model IEnumerable<Task_1.Models.Award>
+﻿@{
+    Layout = "~/Views/Shared/_LayoutPageForAwards.cshtml";
+}
+
+@model IEnumerable<Task_1.Models.Award>
 
 @{
     ViewBag.Title = "Index";
@@ -20,21 +24,22 @@
         </th>
         <th></th>
     </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td><img class="img-thumbnail"  width="100" height="100" src="@Url.Action("GetImage", "Award", new { item.Id })" /></td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td><img class="img-thumbnail" width="100" height="100" src="@Url.Action("GetImage", "Award", new { item.Id })" /></td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+    }
 
 </table>
