--- a/Task_1/Views/User/Create.cshtml
+++ b/Task_1/Views/User/Create.cshtml
@@ -2,37 +2,54 @@
 
 @{
     ViewBag.Title = "Create";
+    Layout = "~/Views/Shared/_LayoutPageForUsers.cshtml";
 }
 
-<h2>Create a  new user</h2>
+<h2>Create</h2>
 
-@using (Html.BeginForm("Create", "User", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm()) 
 {
-    <p>
-        @Html.LabelFor(m => m.Name)
-        <br />
-        @Html.EditorFor(m => m.Name)
+    @Html.AntiForgeryToken()
+    
+    <div class="form-horizontal">
+        <h4>User</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-    </p>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Birthdate, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Birthdate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Birthdate, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-    <p>
-        @Html.LabelFor(m => m.Birthdate)
-        <br />
-        @Html.EditorFor(m => m.Birthdate)
+        <div class="form-group">
+            @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+            
 
-    </p>
-    <p>
-       
-        <input type="file" name="uploadImage"  size="40"        >
-        
+                
+                    <label for="files" class="btn btn-default"> Select file </label>
+                    <input type="file" id="files" style="visibility:hidden;" name="uploadImage" size="25" accept="image/*">
 
-    </p>
+                
+            </div>
+        </div>
 
-
-
-
-    <p><input type="submit" , value="Create" /></p>
-
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
 }
 
 <div>
