--- a/Task_1/Views/User/Edit.cshtml
+++ b/Task_1/Views/User/Edit.cshtml
@@ -1,4 +1,8 @@
-﻿@model Task_1.Models.User
+﻿@{
+    Layout = "~/Views/Shared/_LayoutPageForUsers.cshtml";
+}
+
+@model Task_1.Models.User
 
 @{
     ViewBag.Title = "Edit";
@@ -6,10 +10,10 @@
 
 <h2>Edit</h2>
 
-@using (Html.BeginForm("Edit","User", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Edit", "User", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>User</h4>
         <hr />
@@ -34,19 +38,22 @@
 
 
         <div class="form-group">
-            <div class="editor-label">Image</div>
-            <div class="editor-field">
+            <div class="control-label col-md-2"><b>Image</b></div>
+            <div class="editor-field col-md-10 ">
                 @if (Model.Image == null)
                 {
                     @:Noneewqsdefghjk,/
-    }
+}
                 else
                 {
-                    <img class="img-thumbnail"  width="150" height="150" src="@Url.Action("GetImage", "User", new { Model.Id })" />
+                    <img class="img-thumbnail" width="150" height="150" src="@Url.Action("GetImage", "User", new { Model.Id })" />
                 }
                 <div>
-                    Upload new image:
-                    <input type="file" name="uploadImage" />
+
+                    <label for="files" class="btn btn-default"> Select file </label>
+                    <input type="file" id="files" style="visibility:hidden;" name="uploadImage" size="25" accept="image/*">
+
+
                 </div>
             </div>
         </div>
