--- a/Task_1/Views/User/Edit.cshtml
+++ b/Task_1/Views/User/Edit.cshtml
@@ -33,6 +33,10 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Birthdate, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Birthdate, "", new { @class = "text-danger" })
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.Image)
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.ImageType)
             </div>
         </div>
 
